@@ -20,6 +20,8 @@ ChangeLog
 =========
     
 2009???? - 1.27.90
+
+[-] * Simplify code in FILES smsd service.
     
 20091222 - 1.27.0
     
